<resources>
    <string name="app_name">SWC</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_map">Map</string>
    <string name="bottom_menu_notifications">Notifications</string>
    <string name="bottom_menu_settings">Settings</string>
    <string name="toolbar_menu_rename">Rename</string>
    <string name="toolbar_menu_add">Add Wheel Chair</string>
    <string name="toolbar_menu_disconnect">Remove Wheel Chair</string>
    <string name="mySWC_name_default">My IOT Wheel Chair</string>
    <string name="settings">Settings</string>
    <string name="func_text_01">Beep</string>
    <string name="func_text_02">Location</string>
    <string name="func_text_03">Alert</string>
    <string name="title_welcome_back">Welcome Back</string>
    <string name="title_login">Login!</string>
    <string name="hint_email">EMAIL</string>
    <string name="hint_password">PASSWORD</string>
    <string name="login_btn">LOGIN</string>
    <string name="login_bottom_hint">Don\'t have an account?</string>
    <string name="sign_up_link">SIGN UP</string>
    <string name="title_hello">Hello,</string>
    <string name="title_sign_up">Sign Up!</string>
    <string name="sign_up_btn">SIGN UP</string>
    <string name="sign_up_bottom_hint">Already have an account?</string>
    <string name="login_link">LOGIN</string>
    <string name="email_empty_error">Enter email</string>
    <string name="toast_enter_password">Enter password</string>
    <string name="settings_logout">Logout</string>
    <string name="toast_welcome_back">"Hi, "</string>
    <string name="toast_authentication_failed">Authentication failed.Try again or click Forgot password to reset it.</string>
    <string name="input_empty_error">Required</string>
    <string name="toast_account_created">"Hi, "</string>
    <string name="toast_registration_failed">Registration failed, please log in if you already have an account.</string>
    <string name="current_location">Current Location!</string>
    <string name="plz_check_location_permission">Please on your Location App Permissions</string>
    <string name="map">Map</string>
    <string name="location_perm_denied_msg">The geographic location permission is only used to display your location on the map, and your location data will only be shared with users bound to you</string>
    <string name="notification">Notification</string>
    <string name="input_wheelchair_name">Input wheelchair name hare.</string>
    <string name="plz_check_mailbox">Please check your mailbox to verify your email</string>
    <string name="account_recovery">Account recovery</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="next">Next</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="back">BACK TO LOGIN</string>
    <string name="account_not_found">Account not found</string>
    <string name="email_pattern_wrong">Please enter a valid Email address</string>
    <string name="title_connect_to_swc">Connect to SWC</string>
    <string name="settings_app_version">App Version</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profiles">Edit profiles</string>
    <string name="night_mode">Night Mode</string>
    <string name="login_cancel">Login Cancel</string>
    <string name="login_failed">Login Failed</string>
    <string name="user_binding">User binding</string>
    <string name="binding_user">Binding user</string>
    <string name="cya">cya~</string>
    <string name="noPairedSWC">Cannot find your device, please go to the Bluetooth page to pair your SWC device.</string>
    <string name="check_bluetooth_support">Check Bluetooth support...</string>
    <string name="checking_permission">Checking permissions...</string>
    <string name="bluetooth_permission_granted">Bluetooth permission granted</string>
    <string name="check_bluetooth_enable">Check bluetooth status</string>
    <string name="check_bluetooth_paired">Check paired Bluetooth devices</string>
    <string name="connecting_to_swc">Try to connect to SWC.</string>
    <string name="auto_connect_failed">Automatic connection failed, please check your device and try again</string>
    <string name="successfully_connected_to_swc">Successfully connected to SWC</string>
    <string name="swc">Please connect to SWC first</string>
    <string name="request_permission_location_description">We need to access your location to provide you with the best experience.</string>
    <string name="request_permission_nearby_device_description">We need nearby device permission to connect to wheelchair.</string>
    <string name="request_permission_title">Allow this app to access</string>
    <string name="request_permission_notification_description">We need to send you a notification so you can receive emergency notifications.</string>
    <string name="select_identity">Select Identity</string>
    <string name="option_caregiver">I am a caregiver.</string>
    <string name="option_wheelchair_user">I am a wheelchair user.</string>
    <string name="wheelchair_user">wheelchair user</string>
    <string name="caregiver">caregiver</string>
    <string name="operation_failed_please_try_again">Operation failed, please try again</string>
    <string name="operation_successful">Operation successful</string>
    <string name="password_length_error">Password should be at least 6 characters</string>
    <string name="password_empty_error">Password cannot be empty</string>
    <string name="password_same_error">New password is the same as the old password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="google_account_cannot_change_password">Google account cannot change password via this app</string>
    <string name="unboundUserTitle">You haven\'t bound any user yet</string>
    <string name="unBoundUserMsg">Please bind a user before using this feature</string>
    <string name="uid_copied">UID has been copied, please share it with the primary user</string>
    <string name="input_uid">Please input Uid here.</string>
    <string name="enter_new_nickname">Enter new nickname</string>
    <string name="change_nickname">Change nickname</string>
</resources>