<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="40dp"
    tools:context=".LoginPage">

    <TextView
        android:text="@string/title_welcome_back"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@color/green_200"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/title_login"
        android:textColor="@color/green_100"
        android:textSize="42sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:startIconDrawable="@drawable/baseline_alternate_email_24"
        app:startIconTint="@color/white"
        app:hintTextColor="@color/white"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="@color/error"
        android:textColorHint="@color/white"
        app:errorEnabled="true"
        app:errorTextColor="@color/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/hint_email"
            android:maxLength="35"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:startIconTint="@color/white"
        app:hintTextColor="@color/white"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="@color/error"
        android:textColorHint="@color/white"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        app:errorEnabled="true"
        app:errorTextColor="@color/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/hint_password"
            android:maxLength="35"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    Progress Bar-->
    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center" />

    <!--    Login Button-->
    <Button
        android:id="@+id/login_btn"
        android:text="@string/login_btn"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/green_300"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"/>

    <!--    Switch to Sign Up-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <TextView
            android:text="@string/login_bottom_hint"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/signUpNow"
            android:text="@string/sign_up_link"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

</LinearLayout>