<!-- res/layout/dialog_change_password.xml -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Change Password"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <!-- 舊密碼輸入 -->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:maxLength="35"
        android:textColor="@color/colorOnSurface" />

    <!-- 新密碼輸入 -->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:maxLength="35"
        android:textColor="@color/colorOnSurface" />

    <!-- 按鈕區域 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- 按鈕區域 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_marginEnd="5dp" />

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>
