<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".SignUpPage" >
    <!--    Progress Bar-->
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="2dp"
        android:indeterminate="true"
        android:theme="@style/ProgressBarStyle"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/title_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_hello"
            android:textColor="@color/on_background"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_sign_up"
            android:textColor="@color/primary"
            android:textSize="42sp"
            android:textStyle="bold"
            android:layout_below="@+id/title_hello" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_below="@+id/title_sign_up"
            android:textColorHint="@color/white"
            app:boxBackgroundColor="@color/surface"
            app:boxStrokeColor="@color/white"
            app:boxStrokeErrorColor="@color/error"
            app:errorEnabled="true"
            app:errorTextColor="@color/error"
            app:hintTextColor="@color/white"
            app:startIconDrawable="@drawable/baseline_alternate_email_24"
            app:startIconTint="@color/white"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLength="35"
                android:textColor="@color/on_surface" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/input_email"
            android:textColorHint="@color/white"
            app:boxBackgroundColor="@color/surface"
            app:boxStrokeColor="@color/white"
            app:boxStrokeErrorColor="@color/error"
            app:errorEnabled="true"
            app:errorTextColor="@color/error"
            app:hintTextColor="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            app:startIconDrawable="@drawable/baseline_lock_24"
            app:startIconTint="@color/white" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="35"
                android:textColor="@color/on_surface" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--    Sign up Button-->
        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/input_password"
            android:backgroundTint="@color/primary"
            android:text="@string/sign_up_btn"
            android:textColor="@color/on_primary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forgotPassword"
            android:text="@string/forgot_password"
            android:textColor="@color/link"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_up_btn"
            android:layout_marginTop="10dp" />

        <!--    Switch to Login-->
        <LinearLayout
            android:id="@+id/login_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_bottom_hint"
                android:textColor="@color/on_background"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/loginNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/login_link"
                android:textColor="@color/link"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginOption"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/login_now"
            android:layout_marginBottom="10dp"
            >
            <ImageView
                android:id="@+id/login_google"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/btn_google_sign_in_dark_normal_web" />
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>