<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".ResetPasswordPage"
    >
    <!--    Progress Bar-->
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="411dp"
        android:indeterminate="true"
        android:theme="@style/ProgressBarStyle"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/title_app_name"
            android:text="@string/account_recovery"
            android:textColor="@color/colorOnBackground"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/title_reset_password"
            android:text="@string/reset_your_password"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_app_name" />

        <RelativeLayout
            android:id="@+id/reset_input_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_reset_password">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="@color/colorSurface"
                app:boxStrokeColor="@color/white"
                app:boxStrokeErrorColor="@color/colorError"
                app:errorEnabled="true"
                app:errorTextColor="@color/colorError"
                app:hintTextColor="@color/white"
                app:startIconDrawable="@drawable/baseline_person_outline_24"
                app:startIconTint="@color/white"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLength="35"
                    android:textColor="@color/colorOnSurface"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--    Login Button-->
            <Button
                android:id="@+id/reset_password_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/input_email"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/next"
                android:textColor="@color/colorOnPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

<!--        成功寄出重設密碼郵件後顯示-->
        <RelativeLayout
            android:id="@+id/success_layout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reset_input_view"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="12dp"
            >
            <TextView
                android:id="@+id/success_email"
                android:text="noreply@swc.zzowo.com"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp" />
            <TextView
                android:id="@+id/success_text"
                android:text="An email with reset password link was just sent to your mailbox."
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/success_email"
                android:layout_marginHorizontal="10dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/back_to_login"
            android:text="@string/back"
            android:textColor="@color/colorLink"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingVertical="5dp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>