<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".requestPermissionActivity"
    >
    <!--    Progress Bar-->
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="2dp"
        android:indeterminate="true"
        android:theme="@style/ProgressBarStyle"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <!-- 標題列 -->
        <TextView
            android:id="@+id/title_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/request_permission_title"
            android:textColor="@color/colorOnBackground"
            android:textSize="28sp"
            android:textStyle="bold" />

        <!-- 滾動列表 -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:layout_below="@id/title_bar"
            android:layout_marginTop="40dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_back_white"
                android:orientation="vertical"
                >

                <!-- Location permission -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:paddingHorizontal="10dp"
                    android:paddingBottom="6dp"
                    >
                    <!-- 圖標 -->
                    <ImageView
                        android:id="@+id/location_icon"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:padding="10dp"
                        android:src="@drawable/baseline_my_location_24" />
                    <!-- 功能文字 -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/location_icon"
                        android:text="@string/request_permission_location_description"
                        android:textColor="@color/colorOnSurface"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <!-- Nearby Device permission -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="6dp"
                    android:paddingHorizontal="10dp"
                    android:paddingBottom="12dp"
                    >
                    <!-- 圖標 -->
                    <ImageView
                        android:id="@+id/bluetooth_icon"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:padding="10dp"
                        android:src="@drawable/outline_nearby_24" />
                    <!-- 功能文字 -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/bluetooth_icon"
                        android:text="@string/request_permission_nearby_device_description"
                        android:textColor="@color/colorOnSurface"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <!-- Notification permission -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="6dp"
                    android:paddingHorizontal="10dp"
                    android:paddingBottom="12dp"
                    >
                    <!-- 圖標 -->
                    <ImageView
                        android:id="@+id/notification_icon"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:padding="10dp"
                        android:src="@drawable/baseline_notifications_24" />
                    <!-- 功能文字 -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/notification_icon"
                        android:text="@string/request_permission_notification_description"
                        android:textColor="@color/colorOnSurface"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/next"
            android:textColor="@color/colorOnPrimary"
            android:textSize="20sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>